[gd_scene load_steps=6 format=3 uid="uid://cdk6hwb4hi2wc"]

[ext_resource type="Script" uid="uid://s2jwp616utoj" path="res://Player/player.gd" id="1_2f8j2"]
[ext_resource type="Texture2D" uid="uid://lppp8pne4j6f" path="res://icons/hand.png" id="2_4ntmi"]
[ext_resource type="Texture2D" uid="uid://byimdq4wasv24" path="res://icons/crosshair.png" id="3_btcbx"]
[ext_resource type="Texture2D" uid="uid://bkm6mum4eprwu" path="res://Theme/Gradient.tres" id="4_gwnis"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3rsb5"]
radius = 0.3
height = 1.8

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_2f8j2")

[node name="CShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_3rsb5")
debug_color = Color(0.141176, 0.427451, 0.92549, 0.784314)

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
current = true
fov = 80.0

[node name="Overlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 962.0
offset_bottom = 543.0
mouse_filter = 2

[node name="HandIcon" type="TextureRect" parent="Overlay"]
layout_mode = 0
offset_left = 465.0
offset_top = 255.0
offset_right = 499.0
offset_bottom = 289.0
mouse_filter = 2
texture = ExtResource("2_4ntmi")
expand_mode = 1

[node name="CrossHair" type="TextureRect" parent="Overlay"]
layout_mode = 0
offset_left = 462.0
offset_top = 252.0
offset_right = 500.0
offset_bottom = 290.0
mouse_filter = 2
texture = ExtResource("3_btcbx")
expand_mode = 1

[node name="PauseMenu" type="TextureRect" parent="Overlay"]
visible = false
layout_mode = 0
offset_left = 218.0
offset_top = 127.0
offset_right = 694.0
offset_bottom = 384.0
texture = ExtResource("4_gwnis")

[node name="BackButton" type="TextureButton" parent="Overlay/PauseMenu"]
layout_mode = 0
offset_left = 98.0
offset_top = 54.0
offset_right = 354.0
offset_bottom = 116.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_gwnis")
ignore_texture_size = true
stretch_mode = 0

[node name="ButtonLabel" type="RichTextLabel" parent="Overlay/PauseMenu/BackButton"]
layout_mode = 0
offset_left = 7.0
offset_top = 2.0
offset_right = 165.0
offset_bottom = 68.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Resume"

[node name="QuitButton" type="TextureButton" parent="Overlay/PauseMenu"]
layout_mode = 0
offset_left = 102.0
offset_top = 151.0
offset_right = 355.0
offset_bottom = 213.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_gwnis")
ignore_texture_size = true
stretch_mode = 0

[node name="ButtonLabel" type="RichTextLabel" parent="Overlay/PauseMenu/QuitButton"]
layout_mode = 0
offset_left = 7.0
offset_top = 2.0
offset_right = 165.0
offset_bottom = 68.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Exit"

[connection signal="pressed" from="Overlay/PauseMenu/BackButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Overlay/PauseMenu/QuitButton" to="." method="_on_quit_button_pressed"]
